<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/muOrder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <CheckBox
        android:id="@+id/cbAsc"
        android:text="@string/orderAsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOrder">

        <RadioButton
            android:id="@+id/rbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="200dp"
            android:text="@string/rbTitle" />


        <RadioButton
            android:id="@+id/rbSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="200dp"
            android:text="@string/rbSize" />
    </RadioGroup>


</RelativeLayout>